[package]
name = "fdlibm-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["mtb0x1 <39337159+mtb0x1@users.noreply.github.com>"]
repository = "https://github.com/mtb0x1/fdlibm-rs"
homepage = "https://github.com/mtb0x1/fdlibm-rs"
readme = "README.md"
description = "rust wrapper of FDLIBM, a C math library for machines that support IEEE-754 floating-point arithmetic."
exclude = [".gitignore"]
build = "build.rs"
keywords = ["FDLIBM-rs", "cmath", "math", "IEEE-754", "ffi"]

[build-dependencies]
bindgen = { version = "0.68.1", default-features = false, features = ["runtime"] }
cc = { version = "1.0.83"}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
name = "fdlibm_rs"
path = "src/lib.rs" 
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "acos_benchmark"
harness = false
[[bench]]
name = "atanh_benchmark"
harness = false
[[bench]]
name = "expm1_benchmark"
harness = false
[[bench]]
name = "j1_benchmark"
harness = false
[[bench]]
name = "log_benchmark"
harness = false
[[bench]]
name = "tanh_benchmark"
harness = false
[[bench]]
name = "acosh_benchmark"
harness = false
[[bench]]
name = "cbrt_benchmark"
harness = false
[[bench]]
name = "fabs_benchmark"
harness = false
[[bench]]
name = "jn_benchmark"
harness = false
[[bench]]
name = "pow_benchmark"
harness = false
[[bench]]
name = "asin_benchmark"
harness = false
[[bench]]
name = "ceil_benchmark"
harness = false
[[bench]]
name = "floor_benchmark"
harness = false
[[bench]]
name = "ldexp_benchmark"
harness = false
[[bench]]
name = "sin_benchmark"
harness = false
[[bench]]
name = "asinh_benchmark"
harness = false
[[bench]]
name = "cos_benchmark"
harness = false
[[bench]]
name = "gamma_benchmark"
harness = false
[[bench]]
name = "lgamma_benchmark"
harness = false
[[bench]]
name = "sinh_benchmark"
harness = false
[[bench]]
name = "atan2_benchmark"
harness = false
[[bench]]
name = "cosh_benchmark"
harness = false
[[bench]]
name = "ilogb_benchmark"
harness = false
[[bench]]
name = "log10_benchmark"
harness = false
[[bench]]
name = "sqrt_benchmark"
harness = false
[[bench]]
name = "atan_benchmark"
harness = false
[[bench]]
name = "exp_benchmark"
harness = false
[[bench]]
name = "j0_benchmark"
harness = false
[[bench]]
name = "log1p_benchmark"
harness = false
[[bench]]
name = "tan_benchmark"
harness = false